[package]
name = "geowartry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = [
    "dynamic_linking",
    "bevy_ui",
    "bevy_render",
    "bevy_asset",
    "png",
    "bevy_text",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
