[package]
edition = "2021"
name = "geowartry"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.13.0", features = [
  "dynamic_linking",
  "bevy_ui",
  "bevy_render",
  "bevy_asset",
  "png",
  "bevy_text",
]}
bevy_rapier2d = {version = "0.26.0", features = ["debug-render-2d"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
